--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -11,8 +11,8 @@ jobs:
     runs-on: ubuntu-20.04
     steps: 
       - name: Checkout code
-        uses: action/checkout@v2
-      - name: Install Node 14.x
+        uses: actions/checkout@v2
+      - name: Install Node.js 14.x
         uses: action/setup-node@v2
         with:
           node-version: 14.x
