--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -1,19 +1,19 @@
+# .github/workflows/build-and-test.yml
 name: Build and Test
-on: 
-  push:
-    branches: 
-    - main
+on:
+  push: 
+    branches:
+      - main
   pull_request:
-   
-jobs: 
+jobs:
   build-and-test:
-    name: Build and Test
+    name: Build and test
     runs-on: ubuntu-20.04
-    steps: 
+    steps:
       - name: Checkout code
         uses: actions/checkout@v2
       - name: Install Node.js 14.x
-        uses: action/setup-node@v2
+        uses: actions/setup-node@v2
         with:
           node-version: 14.x
       - name: Install dependencies
